--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "hono-langgraph-tgbot",
+  "name": "daikoai-mvp-tgbot",
   "main": "src/worker.ts",
   "compatibility_date": "2025-06-04",
   "compatibility_flags": ["nodejs_compat", "nodejs_compat_populate_process_env"],
