--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@langchain/community": "^0.3.48",
     "@langchain/core": "^0.3.62",
     "@langchain/langgraph": "^0.3.8",
+    "@langchain/mcp-adapters": "^0.6.0",
     "@langchain/openai": "^0.5.18",
     "@neondatabase/serverless": "^1.0.1",
     "@solana/web3.js": "^1.98.2",
