--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -7,27 +7,104 @@ reviews:
   profile: chill
   request_changes_workflow: false
   high_level_summary: true
+  high_level_summary_placeholder: "@coderabbitai summary"
   poem: true
   review_status: true
-  collapse_empty_files: true
+  collapse_walkthrough: true
+  changed_files_summary: true
+  sequence_diagrams: true
+  assess_linked_issues: true
+  related_issues: true
+  related_prs: true
+  suggested_labels: true
+  auto_apply_labels: false
+  suggested_reviewers: true
+  auto_assign_reviewers: false
+
+  # Auto review settings
   auto_review:
     enabled: true
+    auto_incremental_review: true
     drafts: false
+    ignore_title_keywords: []
+    labels: []
+    base_branches: []
 
-  # Ignore patterns for files that don't need review
-  ignore:
-    - "**/*.md"
-    - "**/README.md"
-    - "**/*.lock"
-    - "**/*.json"
-    - "**/package-lock.json"
-    - "**/bun.lock"
-    - "migrations/**"
-    - "**/*.sql"
-    - "**/*.d.ts"
-    - "worker-configuration.d.ts"
+  # Path filters for files to include/exclude in review
+  path_filters:
+    - "!**/*.md"
+    - "!**/*.lock"
+    - "!**/*.json"
+    - "!migrations/**"
+    - "!**/*.sql"
+    - "!**/*.d.ts"
+    - "!worker-configuration.d.ts"
+    - "src/**"
+    - "tests/**"
 
-# Project-specific review instructions
+  # Path-specific instructions for specialized code areas
+  path_instructions:
+    - path: "src/agents/**"
+      instructions: |
+        Focus on LangGraph state management, node composition, and AI workflow logic.
+        Ensure proper error handling and state transitions.
+
+    - path: "src/db/**"
+      instructions: |
+        Review Drizzle schema definitions, relations, and query optimization.
+        Check for proper indexing and migration safety.
+
+    - path: "src/lib/**"
+      instructions: |
+        Examine third-party integrations for error handling, rate limiting, and data validation.
+        Pay special attention to Solana and crypto-related logic.
+
+    - path: "src/routes/**"
+      instructions: |
+        Focus on API endpoint security, validation, authentication, and proper HTTP status codes.
+        Ensure webhook handling is robust and idempotent.
+
+    - path: "src/cron.ts"
+      instructions: |
+        Review for reliability, error handling, and proper cleanup logic.
+        Ensure data integrity during batch operations.
+
+    - path: "tests/**"
+      instructions: |
+        Ensure comprehensive test coverage for critical business logic.
+        Check for proper mocking of external dependencies.
+
+  # Labeling instructions for automatic label suggestions
+  labeling_instructions:
+    - label: "security"
+      instructions: "Apply when changes involve API key handling, input validation, or security-related code"
+    - label: "performance"
+      instructions: "Apply when changes optimize database queries, memory usage, or Cloudflare Workers performance"
+    - label: "ai/llm"
+      instructions: "Apply when changes involve LangGraph workflows, AI agents, or OpenAI integrations"
+    - label: "blockchain"
+      instructions: "Apply when changes involve Solana integration, wallet handling, or crypto-related features"
+    - label: "telegram"
+      instructions: "Apply when changes involve Telegram bot functionality, Grammy, or webhook handling"
+    - label: "database"
+      instructions: "Apply when changes involve Drizzle ORM, database schema, or query modifications"
+
+  # Pre-merge checks
+  pre_merge_checks:
+    title:
+      mode: warning
+      requirements: "Title should be concise and descriptive, following conventional commit format when possible"
+    description:
+      mode: warning
+
+  # Finishing touches
+  finishing_touches:
+    docstrings:
+      enabled: true
+    unit_tests:
+      enabled: true
+
+# Global instructions for all reviews
 instructions: |
   ## Project Context
   This is a TypeScript-based Telegram bot project running on Cloudflare Workers with the following key technologies:
@@ -79,7 +156,6 @@ instructions: |
   - Minor formatting issues (handled by prettier)
   - Missing JSDoc unless for public APIs
   - File naming conventions (already established)
-  - Console.log usage (project uses custom logger)
 
   ## Response Style
   - Provide responses in Japanese
@@ -88,58 +164,8 @@ instructions: |
   - Be concise but thorough for critical issues
   - Consider the Cloudflare Workers runtime constraints
 
-# Path-specific instructions for specialized code areas
-path_instructions:
-  - path: "src/agents/**"
-    instructions: |
-      Focus on LangGraph state management, node composition, and AI workflow logic.
-      Ensure proper error handling and state transitions.
-
-  - path: "src/db/**"
-    instructions: |
-      Review Drizzle schema definitions, relations, and query optimization.
-      Check for proper indexing and migration safety.
-
-  - path: "src/lib/**"
-    instructions: |
-      Examine third-party integrations for error handling, rate limiting, and data validation.
-      Pay special attention to Solana and crypto-related logic.
-
-  - path: "src/routes/**"
-    instructions: |
-      Focus on API endpoint security, validation, authentication, and proper HTTP status codes.
-      Ensure webhook handling is robust and idempotent.
-
-  - path: "src/cron.ts"
-    instructions: |
-      Review for reliability, error handling, and proper cleanup logic.
-      Ensure data integrity during batch operations.
-
-  - path: "tests/**"
-    instructions: |
-      Ensure comprehensive test coverage for critical business logic.
-      Check for proper mocking of external dependencies.
-
-# Custom review rules
-rules:
-  - name: "Async Error Handling"
-    description: "Check for proper async/await error handling patterns"
-    pattern: "async\\s+function.*\\{[^}]*(?!try|catch)[^}]*\\}"
-    message: "非同期関数ではtry-catchまたはResult型を使用してエラーハンドリングを行ってください"
-
-  - name: "Console.log Usage"
-    description: "Discourage console.log in favor of the project logger"
-    pattern: "console\\.(log|warn|error)"
-    message: "console.logの代わりにprojectのloggerを使用してください(utils/logger.ts)"
-
-  - name: "Direct Database Access"
-    description: "Ensure database access goes through proper utilities"
-    pattern: "import.*drizzle.*from.*(?!\\.\\./utils/db)"
-    message: "データベースアクセスはutils/db.tsを通して行ってください"
-
-# Chat summary settings
-chat_summary:
-  enabled: true
+# Tone instructions for reviews
+tone_instructions: "Be constructive and helpful. Focus on security, performance, and maintainability. Provide specific examples and suggestions for improvement."
 
 # Early access features
 early_access: true
