--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "tsup src/**/*.ts --dts --format esm",
     "format": "prettier --write .",
     "test": "dotenvx run -f .dev.vars -- vitest run",
+    "test:coverage": "dotenvx run -f .dev.vars -- vitest run --coverage",
     "test:unit": "dotenvx run -f .dev.vars -- vitest run tests/unit",
     "test:integration": "dotenvx run -f .dev.vars -- vitest run tests/integration"
   },
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250712.0",
     "@types/pg": "^8.15.4",
+    "@vitest/coverage-v8": "3.2.4",
     "drizzle-kit": "^0.31.4",
     "prettier": "^3.6.2",
     "tsup": "^8.5.0",
