--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
   "typescript.suggest.autoImports": true,
   "cSpell.words": [
     "bollinger",
+    "COOLDOWN",
     "helius",
     "langchain",
     "macd",
