--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,37 @@
     ".dev.vars": "dotenv",
     ".dev.vars.example": "dotenv"
   },
+
+  "editor.defaultFormatter": "biomejs.biome",
   "editor.codeActionsOnSave": {
-    "source.organizeImports": "explicit",
-    "source.removeUnusedImports": "explicit"
+    "quickfix.biome": "explicit",
+    "source.organizeImports.biome": "explicit"
   },
+
+  "biome.enabled": true,
+  "eslint.enable": false,
+  "prettier.enable": false,
+  "deno.enable": false,
+
+  "[typescript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+
   "typescript.preferences.includePackageJsonAutoImports": "auto",
   "typescript.suggest.autoImports": true,
+
   "cSpell.words": [
     "bollinger",
     "COOLDOWN",
@@ -24,5 +49,6 @@
     "VWAP",
     "Vybe",
     "zscore"
-  ]
+  ],
+  "git.ignoreLimitWarning": true
 }
