--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,7 +3,10 @@
   "name": "daikoai-mvp-tgbot",
   "main": "src/worker.ts",
   "compatibility_date": "2025-06-04",
-  "compatibility_flags": ["nodejs_compat", "nodejs_compat_populate_process_env"],
+  "compatibility_flags": [
+    "nodejs_compat",
+    "nodejs_compat_populate_process_env",
+  ],
   "triggers": {
     "crons": ["*/5 * * * *"],
   },
