fix: lint error

--- a/biome.json
+++ b/biome.json
@@ -34,6 +34,13 @@
       }
     }
   },
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    }
+  },
   "javascript": {
     "formatter": {
       "quoteStyle": "double",
